--- a/source/contact.css
+++ b/source/contact.css
@@ -9,6 +9,7 @@
 
 .navbar {
     background-color: #131313;
+    border-bottom: rgba(231, 228, 223, 0.847) 1px solid;
 }
 
 .navbar .nav-link {
@@ -42,7 +43,7 @@
 }
 
 .img-fluid {
-    padding-top: 50px;
+    padding-top: 60px;
     padding-bottom: 0px;
     width: 60vw;
 }
@@ -53,13 +54,13 @@ h4 {
 
 .form-group-one {
     padding-top: 15px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 
 .form-group {
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 
 label {
@@ -68,7 +69,7 @@ label {
 }
 
 .container-one {
-    margin-left: 150px;
+    margin-left: 250px;
 }
 
 .btn img {
@@ -104,7 +105,7 @@ label {
 @media only screen and (min-width: 601px) and (max-width: 900px) {
 
     .img-fluid {
-        padding-top: 80px;
+        padding-top: 90px;
     }
     
 }
