--- a/source/menu.css
+++ b/source/menu.css
@@ -4,10 +4,12 @@
 
 .background {
     background-color: #8A2901;
+    height: 100vh;
 }
 
 .navbar {
     background-color: #131313;
+    border-bottom: rgba(231, 228, 223, 0.847) 1px solid;
 }
 
 .navbar .nav-link {
@@ -42,8 +44,8 @@
 
 .drinks{
     color: #E1DBCF;
-    padding-top: 80px;
-    padding-left: 30px;
+    padding-top: 120px;
+    padding-left: 110px;
     margin-bottom: 0px;
     text-transform: uppercase;
     font-size: 20px;
@@ -52,13 +54,20 @@
 
 .food{
     color: #E1DBCF;
-    padding-top: 10px;
-    padding-left: 30px;
+    padding-top: 130px;
+    padding-left: 150px;
     margin-bottom: 0px;
-    font-family: ;
     text-transform: uppercase;
     font-size: 20px;
     font-family: 'Aboreto', sans-serif;
+}
+
+#listdrinks {
+    margin-left: 80px;
+}
+
+#listfood {
+    margin-left: 120px;
 }
 
 .list-group-flush {
@@ -86,17 +95,38 @@
     color: #8A2901!important;
 }
 
-.col-lg-10 {
-    margin-bottom: 50px;
+.col-lg-3 {
+    margin-bottom: 100px;
+    margin-left: 60px;
+    margin-top: 50px;
 }
 
-@media only screen and (min-width: 601px) and (max-width: 900px) {
 
-.background {
-    background-color: #8A2901;
-    position:absolute; 
-    height:100%; 
-    width:100%;
-}
+@media only screen and (max-width: 480px) {
 
+    .background {
+        background-color: #8A2901;
+        position:absolute; 
+        height:100%; 
+        width:100%;
+    }
+
+    .drinks{
+        padding-left: 30px;
+        padding-top: 90px;
+    }
+
+    .food {
+        padding-left: 30px;
+        padding-top: 20px;
+    }
+
+    #listdrinks {
+        margin-left: 0px;
+    }
+    
+    #listfood {
+        margin-left: 0px;
+    }
+    
 }
